# ruflo

./: .claudemcp.json  .env.example  .eslintignore  .eslintrc.json  .gitignore  .trivyignore  AIME_AI_CONSULTING_STRATEGIC_PLAN.md  AIME_INTEGRATION_ARCHITECTURE.md  AIME_PROGRESS_TRACKER.md  ANALISE_SUPERPOWERS.md  AUDITORIA_SISTEMA.md  AUTO_AGENT_CREATION_README.md  AZURE_AGENT_DELIVERY.md  CHANGELOG.md  CLAUDE.md  CLI_VS_MCP_CLAUDE_FLOW.md  CODE_OF_CONDUCT.md  COMO_FUNCIONA_SISTEMA.md  CONTRIBUTING.md  CONTRIBUTION_INSTRUCTIONS.md  CORRECOES_SISTEMA.md  DATA_MODEL_SPECIFICATION.md  ELIMINACAO_SWARM.md  GEMINI.md  HIERARQUIA_AGENTES.md  HIVE_MIND_TASK_ASSIGNMENTS.md  INSTALL_CLAUDE_FLOW.md  KIMI_QUICKSTART.md  MCP_SUCCESS_SUMMARY.md  MCP_TOOLS_INVENTORY.md  MEMORIA_RAG_STATUS.md  PARATHINKER_GUIDE.md  PULL_REQUEST.md  QUICK_MCP_SETUP.md  RAGBOARD-README.md  README-AIME.md  README.md  REALTIME_COLLABORATIVE_DASHBOARD_ARCHITECTURE.md  REBASE_STRATEGY.md  RELATORIO_ANALISE_SINTESE.md  (+33 more)
.claude/: SESSION_HISTORY.md  settings copy.json  settings.json
.claude-plugin/: README.md  marketplace.json
.devin/: wiki.json
.gemini/: settings.json
.github/: FORK_GUIDE.md  dependabot.yml
.hive-mind/: config.json
.swarm/: hnsw.index  hnsw.metadata.json  memory.db  schema.sql
agents/: architect.yaml  beads-coordinator.yaml  beads-executor.yaml  beads-planner.yaml  coder.yaml  (+4 more)
v3/plugins/web4-governance/: Cargo.toml  README.md  package.json  tsconfig.json  tsup.config.ts
v3/plugins/web4-governance/src/: governance.ts  hooks.ts  index.ts  policy.ts  presets.ts  trust.ts  types.ts
v3/plugins/web4-governance/src/wasm/: index.ts  loader.ts
v3/plugins/web4-governance/wasm/governance-wasm/: Cargo.toml
v3/plugins/web4-governance/wasm/governance-wasm/src/: audit.rs  lib.rs  policy.rs  trust.rs  witness.rs
(+3408 files in other folders)
