# Web4 Governance Plugin - Rust Workspace for Trust-Based Policy WASM
#
# Integrates web4-trust-core for trust tensor calculations and witnessing chains.
# Provides policy evaluation with trust-weighted decisions.
#
# Build with: wasm-pack build --target web

[workspace]
members = [
    "wasm/governance-wasm"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ruvnet/claude-flow"

[workspace.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
sha2 = "0.10"

# Use shared utilities from gastown-bridge for consistency
gastown-shared = { path = "../gastown-bridge/wasm/shared" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"
strip = "symbols"
